--- a/Invessence/modules/web/src/main/webapp/pages/advisor/operations/trade.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/operations/trade.xhtml
@@ -26,25 +26,41 @@
 
                 }
             });
-            //            });
 
         </script>
 
         <div class="layout-portlets-box backgroundAdvPortlets">
             <div class="Container100">
                 <h:form id="tradeForm">
-
-                    <p:panel styleClass="invNBgrid customtabcontainer">
-                        <p:outputLabel value="Trade " styleClass="activetabetrade"/>
-
-                        <p:commandLink value="Review" styleClass="inactivetabtrade" actionListener="#{tradeBean.showTradeUI(2)}"/>
-                    </p:panel>
-
                     <p:growl id="growltrademsg" closable="true" style="top: 25%"/>
+
+                    <p:panel styleClass="invNBgrid">
+                        <ui:fragment rendered="#{tradeBean.isTradeActive}">
+                            <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1 active"
+                                 style="cursor: pointer;">Trade</div>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{! tradeBean.isTradeActive}">
+                            <p:commandLink actionListener="#{tradeBean.setTradeUI('T')}">
+                                <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1"
+                                     style="cursor: pointer;">Trade</div>
+                            </p:commandLink>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{tradeBean.isReviewActive}">
+                            <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2 active"
+                                 style="cursor: pointer;">Review</div>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{! tradeBean.isReviewActive}">
+                            <p:commandLink actionListener="#{tradeBean.setTradeUI('R')}">
+                                <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2"
+                                     style="cursor: pointer;">Review</div>
+                            </p:commandLink>
+                        </ui:fragment>
+                    </p:panel>
 
                     <p:panel id="tradePanel" styleClass="invNBgrid">
                         <div class="Container100">
                             <div class="Fleft filterMBBlock margintoptrade">
+
 
                                 <p:selectCheckboxMenu id="ttFilter" label="Filter"
                                                       styleClass="multiSelectionDropdown" panelStyle="width:250px"
@@ -82,6 +98,7 @@
                                          paginator="true" rows="10"
                                          rowsPerPageTemplate="5,10,15"
                                          paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
+                                         rowKey="#{filteredClientData.acctnum}"
                                          selection="#{tradeBean.selectedClientList}">
                                 <f:facet name="header" style="text-align: left;">
 
