--- a/Invessence/modules/web/src/main/webapp/pages/advisor/operations/tradesummary.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/operations/tradesummary.xhtml
@@ -10,8 +10,7 @@
         <div class="layout-portlets-box backgroundAdvPortlets">
             <div class="Container100">
 
-                <p:panel style="width: 900px;height: 600px;border: 0px; margin: 0px;">
-                    <p:scrollPanel id="reviewDetailView" mode="native" styleClass="Container100" style="border: 0px">
+                <p:panel style="border: 0px; margin: 0px;">
                         <div class="Container50">
                             <div class="DispInlBlock">
                                 <p:panel id="displayInfo" styleClass="Fleft" style="border: 0px">
@@ -25,7 +24,7 @@
                         </div>
                         <div class="Container50 Fright TexAlRight">
                             <p:commandButton value="Close"
-                                             actionListener=""/>
+                                             actionListener="#{tradeBean.setTradeUI('R')}"/>
                         </div>
 
                         <div class="Container100 Responsive">
@@ -35,7 +34,7 @@
                             <p:fieldset legend="Overview" collapsed="false" toggleable="true" toggleSpeed="500">
                                 <p:panel style="border: 0px">
                                     <p:dataTable id="editAlloc" styleClass="invAllocTable"
-                                                 value="#{tradeBean.managedList}"
+                                                 value="#{tradeBean.assetList}"
                                                  var="assetList">
 
                                         <f:facet name="header">
@@ -61,12 +60,12 @@
                                             <h:outputText value=" "/>
                                         </p:column>
                                         <p:column style="width: 10%; text-align: left;">
-                                            <h:outputText value="#{assetList.asset}"/>
+                                            <h:outputText value="#{assetList.assetclass}"/>
                                         </p:column>
 
                                         <p:column style="width: 10%; text-align: right;">
                                             <h:outputText
-                                                    value="#{tradeBean.webutil.MathAbs(assetList.holdingValue / tradeBean.selectedTradeSummary.totalHoldingValue)}"
+                                                    value="#{tradeBean.displayWeight(assetList.holdingValue, tradeBean.sumHoldingValue)}"
                                                     style="text-align: right">
                                                 <f:convertNumber pattern="##0.00%"/>
                                             </h:outputText>
@@ -79,13 +78,13 @@
 
                                         <p:column style="width: 10%; text-align: right; background-color: #f5f5f5">
                                             <h:outputText
-                                                    value="#{tradeBean.webutil.MathAbs((assetList.value) / tradeBean.selectedTradeSummary.totalHoldingValue)}"
+                                                    value="#{tradeBean.displayWeight(assetList.newValue, tradeBean.sumNewValue)}"
                                                     style="text-align: right;">
                                                 <f:convertNumber pattern="##0.00%"/>
                                             </h:outputText>
                                         </p:column>
                                         <p:column style="width: 15%; text-align: right; background-color: #f5f5f5">
-                                            <h:outputText value="#{assetList.value}" style="text-align: right;">
+                                            <h:outputText value="#{assetList.newValue}" style="text-align: right;">
                                                 <f:convertNumber type="currency" currencySymbol="$"/>
                                             </h:outputText>
                                         </p:column>
@@ -94,10 +93,10 @@
                                             <p:row>
                                                 <p:column colspan="2" footerText="Total" style="text-align:left"/>
                                                 <p:column colspan="2" style="text-align:right"
-                                                          footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.selectedTradeSummary.totalHoldingValue)}">
+                                                          footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.sumHoldingValue)}">
                                                 </p:column>
                                                 <p:column colspan="2" style="text-align:right"
-                                                          footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.selectedTradeSummary.totalNewValue)}">
+                                                          footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.sumNewValue)}">
                                                 </p:column>
                                             </p:row>
                                         </p:columnGroup>
@@ -105,10 +104,10 @@
 
                                 </p:panel>
                             </p:fieldset>
-                            <p:fieldset legend="Detail" collapsed="true" toggleable="true" toggleSpeed="500"
+                            <p:fieldset legend="Detail" collapsed="false" toggleable="true" toggleSpeed="500"
                                         style="padding-left: 0px; padding-right: 0px">
                                 <p:dataTable id="dataTable" var="tradedata"
-                                             value="#{tradeBean.selectedTradeSummary.tradeData}"
+                                             value="#{tradeBean.rebalancetradedatalist}"
                                              styleClass="invDataTable Fs10">
 
                                     <f:facet name="header">
@@ -200,13 +199,13 @@
                                             <p:column colspan="5" footerText="Total" style="text-align:left"/>
 
                                             <p:column colspan="2"
-                                                      footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.selectedTradeSummary.totalHoldingValue)}"
+                                                      footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.sumHoldingValue)}"
                                                       style="text-align:right"/>
                                             <p:column colspan="2"
-                                                      footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.selectedTradeSummary.totalNewValue)}"
+                                                      footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.sumNewValue)}"
                                                       style="text-align:right"/>
                                             <p:column colspan="2"
-                                                      footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.selectedTradeSummary.totalCurrentValue)}"
+                                                      footerText="#{dataDisplayConverter.displayAsMoney(tradeBean.sumCurValue)}"
                                                       style="text-align:right"/>
                                             <p:column colspan="1" footerText="" style="text-align:left"/>
                                         </p:row>
@@ -216,10 +215,9 @@
                             </p:fieldset>
                         </div>
 
-                    </p:scrollPanel>
                     <f:facet name="footer">
                         <p:commandButton value="Close"
-                                         oncomplete="PF('reviewDetailDialog').hide();"/>
+                                         actionListener="#{tradeBean.setTradeUI('R')}"/>
                     </f:facet>
 
                 </p:panel>
