--- a/Invessence/modules/web/src/main/webapp/pages/advisor/operations/trade.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/operations/trade.xhtml
@@ -34,31 +34,31 @@
                 <h:form id="tradeForm">
                     <p:growl id="growltrademsg" closable="true" style="top: 25%"/>
 
-                    <p:panel styleClass="invNBgrid">
+                    <p:panel styleClass="invNBgrid tabborderbottom">
                         <ui:fragment rendered="#{tradeBean.isTradeActive}">
-                            <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1 active"
+                            <div class="Fs30 Fleft summaryHeader mainHeaderUOB activetabetrade"
                                  style="cursor: pointer;">Trade</div>
                         </ui:fragment>
                         <ui:fragment rendered="#{! tradeBean.isTradeActive}">
                             <p:commandLink actionListener="#{tradeBean.setTradeUI('T')}">
-                                <div class="Fs30 Fleft summaryHeader mainHeaderUOB RPHeadings1"
+                                <div class="Fs30 Fleft summaryHeader mainHeaderUOB activetabetrade"
                                      style="cursor: pointer;">Trade</div>
                             </p:commandLink>
                         </ui:fragment>
                         <ui:fragment rendered="#{tradeBean.isReviewActive}">
-                            <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2 active"
+                            <div class="Fs30 Fleft detailHeader mainHeaderUOB  active inactivetabreview"
                                  style="cursor: pointer;">Review</div>
                         </ui:fragment>
                         <ui:fragment rendered="#{! tradeBean.isReviewActive}">
                             <p:commandLink actionListener="#{tradeBean.setTradeUI('R')}">
-                                <div class="Fs30 Fleft detailHeader mainHeaderUOB RPHeadings2"
+                                <div class="Fs30 Fleft detailHeader mainHeaderUOB  inactivetabreview"
                                      style="cursor: pointer;">Review</div>
                             </p:commandLink>
                         </ui:fragment>
                     </p:panel>
 
                     <p:panel id="tradePanel" styleClass="invNBgrid">
-                        <div class="Container100">
+                        <div class="Container100"     style="margin-bottom: 20px;">
                             <div class="Fleft filterMBBlock margintoptrade">
 
 
