Prashant 07/11/2017 Web properties and Report function

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creports.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creports.xhtml
@@ -44,6 +44,12 @@
                                          reflow="true">
 
                                 <p:column styleClass="Wid20 TexAlLeft"
+                                          sortBy="#{report.clientAccountID}" headerText="Account#"
+                                          resizable="true">
+                                    <h:outputText value="#{report.clientAccountID}"/>
+                                </p:column>
+
+                                <p:column styleClass="Wid20 TexAlLeft"
                                           sortBy="#{report.businessdate}" headerText="Date"
                                           resizable="true">
                                     <h:outputText value="#{report.businessdate}"/>
