--- a/Invessence/modules/web/src/main/webapp/login.xhtml
+++ b/Invessence/modules/web/src/main/webapp/login.xhtml
@@ -54,7 +54,9 @@
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
                         <p:button  value="Forgot Password ?" styleClass="Fs16 RedButton FgtPwdBtn" href="/forgot.xhtml"></p:button>
-                        <p:button  value="Register" styleClass="Fs16 OrangeButton uob_button" href="/signup.xhtml?a=Y"></p:button>
+                        <p:button  value="Register"
+                                   styleClass="Fs16 OrangeButton uob_button"
+                                   href="/signup.xhtml?a=Y"></p:button>
                         <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
