--- a/Invessence/modules/web/src/main/webapp/pages/advisor/operations/tradereview.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/operations/tradereview.xhtml
@@ -33,22 +33,22 @@
                     <p:growl id="growltrademsg" closable="true" style="top: 25%"/>
 
                     <p:panel styleClass="invNBgrid tabborderbottom">
-                        <ui:fragment rendered="#{tradeBean.isTradeActive}" id="tradeBtn">
+                        <ui:fragment rendered="#{tradeBean.isTradeActive}">
                             <div class="Fs30 Fleft summaryHeader mainHeaderUOB inactivetabtrade"
                                  style="cursor: pointer;">Trade</div>
                         </ui:fragment>
-                        <ui:fragment rendered="#{! tradeBean.isTradeActive}" id="tradeBtn">
-                            <p:commandLink actionListener="#{tradeBean.setTradeUI('T')}">
+                        <ui:fragment rendered="#{! tradeBean.isTradeActive}">
+                            <p:commandLink actionListener="#{tradeBean.setTradeUI('T')}" id="tradeBtn">
                                 <div class="Fs30 Fleft summaryHeader mainHeaderUOB inactivetabtrade"
                                      style="cursor: pointer;">Trade</div>
                             </p:commandLink>
                         </ui:fragment>
-                        <ui:fragment rendered="#{tradeBean.isReviewActive}" id="reviewBtn">
+                        <ui:fragment rendered="#{tradeBean.isReviewActive}">
                             <div class="Fs30 Fleft detailHeader mainHeaderUOB activetabereview"
                                  style="cursor: pointer;">Review</div>
                         </ui:fragment>
-                        <ui:fragment rendered="#{! tradeBean.isReviewActive}" id="reviewBtn">
-                            <p:commandLink actionListener="#{tradeBean.setTradeUI('R')}">
+                        <ui:fragment rendered="#{! tradeBean.isReviewActive}">
+                            <p:commandLink actionListener="#{tradeBean.setTradeUI('R')}" id="reviewBtn">
                                 <div class="Fs30 Fleft detailHeader mainHeaderUOB activetabereview"
                                      style="cursor: pointer;">Review</div>
                             </p:commandLink>
