Code check in By Sagar for UAT issue fixing

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -33,8 +33,6 @@
                      styleClass="Container100 Responsive100 liabilityCenterContent_uob"
                      style="border:0px !important; background:none;margin-bottom:10px; text-align: center;">
             <p:selectOneRadio value="#{uobpb.accountFinancials.dependent}" id="uobdddependents" stytleclass="fltr">
-                <p:ajax listener="#{uobpb.onChangeValue}"
-                        update=":ceForm:workArea, :ceForm:graphArea"/>
                 <f:selectItem id="uobddd0" itemLabel="0" itemValue="0"/>
                 <f:selectItem id="uobddd1" itemLabel="1" itemValue="1"/>
                 <f:selectItem id="uobddd2" itemLabel="2" itemValue="2"/>
@@ -46,25 +44,21 @@
 
         <div class="TexAlLeft Wid100">
             <div class="uobBoldText">Total Expenses</div>
-            <div class="uobSubText">(Include your annual cost for Household, Family Expenses, Children’s Tuition, Mortgage, Holiday Travel and any other living cost)</div>
+            <div class="uobSubText">(Include your annual cost for Household expenses. For example family expenses, children’s tuition, mortgage, holiday travel and any other living cost)</div>
         </div>
         <p:inputNumber value="#{uobpb.accountFinancials.totalExpense}" placeholder="$" id="uobinputtexp"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
-            <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:graphArea, :ceForm:buttonArea"/>
         </p:inputNumber>
 
         <div class="EmptyBox10"></div>
         <div class="Wid100">
             <div class="uobBoldText">Total Debt</div>
-            <div class="uobSubText">(Include your Car Payments, Credit Card bills etc.)</div>
+            <div class="uobSubText">(Include your car payments, credit card bills and any other personal debt obligations.)</div>
         </div>
         <p:inputNumber value="#{uobpb.accountFinancials.totalDebt}" placeholder="$" id="uobinputtdebt"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
-            <p:ajax listener="#{uobpb.onChangeValue}"
-                    update=":ceForm:graphArea, :ceForm:buttonArea"/>
         </p:inputNumber>
     </div>
 
