Code check in By Sagar  for UAT issue fixing

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -44,7 +44,7 @@
 
         <div class="TexAlLeft Wid100">
             <div class="uobBoldText">Total Expenses</div>
-            <div class="uobSubText">(Include your annual cost for Household expenses. For example family expenses, children’s tuition, mortgage, holiday travel and any other living cost)</div>
+            <div class="uobSubText">(Include your annual cost for household expenses. For example family expenses, children’s tuition, mortgage, holiday travel and any other living cost)</div>
         </div>
         <p:inputNumber value="#{uobpb.accountFinancials.totalExpense}" placeholder="$" id="uobinputtexp"
                        styleClass="Wid100 uob_number_field" maxlength="15"
