--- a/Invessence/modules/web/src/main/webapp/login.xhtml
+++ b/Invessence/modules/web/src/main/webapp/login.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/simple.xhtml">
+                template="/template/common/main.xhtml">
 
     <f:metadata>
         <f:event listener="#{sessionControl.preRenderView}" type="preRenderView"/>
