--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q7.xhtml
@@ -25,7 +25,7 @@
                     <div class="riskGraphBarBlock">
                         <p:commandLink id="uobp7selbtn1" actionListener="#{uobpb.setRiskBar('1')}"
                                        process="@this" styleClass="PSlabLink"
-                                       update="ceForm:rTabView:q7Panel, :ceForm:graphArea, :ceForm:buttonArea">
+                                       update="ceForm:rTabView:q7Panel, :ceForm:graphArea, :ceForm:buttonArea, :ceForm:buttonArea2">
                             <div class="marginCenteronly1">
                                 <div class="brTopLabel">12%</div>
                                 <div class="bar1 #{uobpb.getActiveRiskBar('1')}">
@@ -42,7 +42,7 @@
                         </p:commandLink>
                         <p:commandLink id="uobp7selbtn2" actionListener="#{uobpb.setRiskBar('2')}"
                                        process="@this" styleClass="PSlabLink"
-                                       update="ceForm:rTabView:q7Panel, :ceForm:graphArea, :ceForm:buttonArea">
+                                       update="ceForm:rTabView:q7Panel, :ceForm:graphArea, :ceForm:buttonArea, :ceForm:buttonArea2">
                             <div class="marginCenteronly2">
                                 <div class="brTopLabel">24%</div>
                                 <div class="bar2 #{uobpb.getActiveRiskBar('2')}">
@@ -57,7 +57,7 @@
                         </p:commandLink>
                         <p:commandLink id="uobp7selbtn3" actionListener="#{uobpb.setRiskBar('3')}"
                                        process="@this" styleClass="PSlabLink"
-                                       update="ceForm:rTabView:q7Panel, :ceForm:graphArea, :ceForm:buttonArea">
+                                       update="ceForm:rTabView:q7Panel, :ceForm:graphArea, :ceForm:buttonArea, :ceForm:buttonArea2">
                             <div class="marginCenteronly3">
                                 <div class="brTopLabel">36%</div>
                                 <div class="bar3 #{uobpb.getActiveRiskBar('3')}">
