Issues fixes Buttons on register page

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/register.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/register.xhtml
@@ -53,10 +53,10 @@
                                 <div class="Container100" style="text-align: center;">
                                     <p:commandButton value="Review" id="newregreview"
                                                      update=":ceForm:inputArea"
-                                                     actionListener="#{tcmpb.gotoReview}"/>
+                                                     actionListener="#{tcmpb.gotoReview}" styleClass="customwidthbutton"/>
                                     <p:commandButton value="Open Account" type="submit" id="newregopenacct"
                                                      update=":ceForm:inputArea"
-                                                     actionListener="#{tcmpb.gotoCustody}"/>
+                                                     actionListener="#{tcmpb.gotoCustody}" styleClass="customwidthbutton"/>
                                 </div>
                             </f:facet>
 
