--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -15,10 +15,10 @@
             <div class="ContainerIndent PaddingTopBottomNone">
                 <div class="Container100">
                     <div class="DispInlBlock MarTop20">
-                        <div class="Container20"><i class="fa fa-user Fs40 red Fleft MarRight10"></i></div>
-                        <div class="Container80">
-                            <div class="Fright">
-                                <h2 class="black Fs18 FontThemeMedium AdvUserName">#{webutil.lastFirstName}</h2>
+
+                        <div class="Container100">
+                            <div class="Fleft">
+                                <i class="fa fa-user Fs40 red Fleft MarRight10"></i> <h2 class="black Fs18 FontThemeMedium AdvUserName Fleft">#{webutil.lastFirstName}</h2>
                             </div>
                         </div>
                     </div>
