--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creportsN.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creportsN.xhtml
@@ -75,7 +75,8 @@
 
                             <p:selectOneMenu id="applyFilter" style="    width: 300px;
     display: inline-block;
-    margin: 10px 10px 0px 10px;
+    float: left;
+    margin: 10px 10px 0px 0px;
     min-width: 105px;">
                                 <f:selectItem itemLabel="Apply Filter" itemValue="" />
                                 <f:selectItem itemLabel="Account Type" itemValue="Account Type" />
@@ -84,7 +85,7 @@
 
                             <p:inputText style="    float: left;
     margin-top: 10px;
-    margin-left: 20px;
+
     width: 200px;" />
 
                             <p:inputText style="    float: left;
@@ -95,7 +96,7 @@
 
                         </div>
 
-                        <p:commandButton value="Filter" icon="ui-icon-check" styleClass="uobsagbutton" style="clear: both; display: block;"/>
+                        <p:commandButton value="Filter" icon="ui-icon-check" styleClass="uobsagbutton" style="clear: both; display: block; margin-top: 20px;"/>
 
                     </div>
 
