--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creportsN.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creportsN.xhtml
@@ -96,7 +96,7 @@
 
                         </div>
 
-                        <p:commandButton value="Filter" icon="ui-icon-check" styleClass="uobsagbutton" style="clear: both; display: block; margin-top: 20px;"/>
+                        <p:commandButton value="Filter" icon="ui-icon-check" styleClass="uobsagbutton" style="clear: both; margin-top: 20px;"/>
 
                     </div>
 
